--- a/nix-on-droid/clamav/freshclam.conf
+++ b/nix-on-droid/clamav/freshclam.conf
@@ -22,4 +22,4 @@ Bytecode true
 Checks 24
 DatabaseMirror db.local.clamav.net
 DatabaseMirror database.clamav.net
-PidFile /data/data/com.termux.nix/files/home/.local/share/clamav/clam.pid
+PidFile /data/data/com.termux.nix/files/home/.local/share/clamav/freshclam.log
