--- a/nix-on-droid/clamav/clamd.conf
+++ b/nix-on-droid/clamav/clamd.conf
@@ -1,4 +1,4 @@
-LocalSocket /var/run/clamav/clamd.ctl
+LocalSocket /data/data/com.termux.nix/files/home/.local/share/clamav/clamd.ctl
 FixStaleSocket true
 LocalSocketGroup nix-on-droid
 LocalSocketMode 666
