--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "private"]
 	path = private
-	url = nod:/data/data/com.termux.nix/files/home/.local/data/git/piles.git
+	url = dnod:/data/data/com.termux.nix/files/home/.local/data/git/piles.git
