--- a/distrobox.ini
+++ b/distrobox.ini
@@ -7,6 +7,14 @@ home="~/.local/share/distrobox/base"
 additional_packages="git curl wget"
 exported_bins_path="~/.local/bin"
 
+[test]
+image=debian:bookworm-slim
+nvidia=false
+pull=false
+root=false
+home=~/.local/share/distrobox/test
+exported_bins_path="~/.local/bin"
+
 [app]
 image=debian:bookworm-slim
 nvidia=false
