distrobox, hm: librewolf, exa

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -21,7 +21,7 @@ nvidia=false
 pull=false
 root=false
 home="~/.local/share/distrobox/app"
-additional_packages="lazarus"
+additional_packages="lazarus simplescreenrecorder"
 exported_apps="Lazarus"
 exported_bins="lazarus-ide"
 exported_bins_path="~/.local/bin"
