--- a/tor/torsocks.conf
+++ b/tor/torsocks.conf
@@ -6,6 +6,8 @@
 #
 # torsocks.conf(5), torsocks(1) and torsocks(8) manpages.
 
+# Default Tor address and port. By default, Tor will listen on localhost for
+# any SOCKS connection and relay the traffic on the Tor network.
 TorAddress 127.0.0.1
 TorPort 9050
 
@@ -41,4 +43,6 @@ OnionAddrRange 127.42.42.0/24
 # (Default: 0)
 #IsolatePID 1
 
-EnableIPv6 0
+# Enable IPv6 support in torsocks. torsocks IPv6 support is currently incomplete
+# and can have some tricky failure modes.
+#EnableIPv6 1
