--- a/rsync/rsyncd.conf
+++ b/rsync/rsyncd.conf
@@ -2,8 +2,13 @@ uid = aspian
 gid = aspian
 port = 873
 use chroot = yes
+incoming chmod = D770, F660
+
 pid file = /srv/rsyncd/rsyncd.pid
 log file = /srv/rsyncd/rsyncd.log
+
+hosts deny = 0.0.0.0/0
+hosts allow = 192.168.100.0/24
 
 [dalet]
 comment = Backup for Dalet
