--- a/distrobox.ini
+++ b/distrobox.ini
@@ -1,27 +1,18 @@
-[debian_base]
-image=debian:bookworm-slim
-nvidia=false
-pull=true
-root=false
-home="~/.local/share/distrobox/base"
-additional_packages="git curl wget"
-exported_bins_path="~/.local/bin"
+# [app]
+# image=debian:bookworm-slim
+# nvidia=false
+# pull=false
+# root=false
+# home="~/.local/share/distrobox/app"
+# additional_packages="lazarus simplescreenrecorder"
+# exported_apps="Lazarus"
+# exported_bins="lazarus-ide"
+# exported_bins_path="~/.local/bin"
 
-[test]
+[dtest]
 image=debian:bookworm-slim
 nvidia=false
 pull=false
 root=false
-home=~/.local/share/distrobox/test
-exported_bins_path="~/.local/bin"
-
-[app]
-image=debian:bookworm-slim
-nvidia=false
-pull=false
-root=false
-home="~/.local/share/distrobox/app"
-additional_packages="lazarus simplescreenrecorder"
-exported_apps="Lazarus"
-exported_bins="lazarus-ide"
+home="~/.local/share/distrobox/test"
 exported_bins_path="~/.local/bin"
