delete: nix-on-droid

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -1,18 +1,7 @@
-# [app]
-# image=debian:bookworm-slim
-# nvidia=false
-# pull=false
-# root=false
-# home="~/.local/share/distrobox/app"
-# additional_packages="lazarus simplescreenrecorder"
-# exported_apps="Lazarus"
-# exported_bins="lazarus-ide"
-# exported_bins_path="~/.local/bin"
-
 [dtest]
 image=debian:bookworm-slim
 nvidia=false
-pull=false
+pull=true
 root=false
 home="~/.local/share/distrobox/test"
 exported_bins_path="~/.local/bin"
