--- a/distrobox.ini
+++ b/distrobox.ini
@@ -1,7 +1,7 @@
-[dtest]
+[debian]
 image=debian:bookworm-slim
 nvidia=false
 pull=true
 root=false
-home="~/.local/share/distrobox/test"
+home="~/.local/share/distrobox/debian"
 exported_bins_path="~/.local/bin"
