--- a/i3/config
+++ b/i3/config
@@ -34,7 +34,7 @@ bindsym $mod+Shift+q kill
 
 # start program launcher
 # bindsym $mod+d exec --no-startup-id dmenu_recency
-bindsym Mod1+d exec "rofi -modi drun,run -show drun"
+bindsym $mod+d exec "~/.config/rofi/launchers/type-3/launcher.sh"
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -65,11 +65,13 @@ bindsym $mod+F5 exec terminal -e 'mocp'
 bindsym $mod+t exec --no-startup-id pkill picom
 bindsym $mod+Ctrl+t exec --no-startup-id picom -b
 bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
-bindsym Print exec --no-startup-id i3-scrot
+bindsym Print exec --no-startup-id "~/.config/rofi/applets/bin/screenshot.sh"
 bindsym $mod+Print --release exec --no-startup-id i3-scrot -w -d /home/kuro/Pictures/Screenshot
 bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
 bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
+bindsym $mod+Shift+v exec --no-startup-id "~/.config/rofi/applets/bin/volume.sh"
+bindsym $mod+Shift+p exec --no-startup-id "~/.config/rofi/applets/bin/powermenu.sh"
 
 # focus_follows_mouse no
 
