--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -20,15 +20,17 @@ home = /home/kuro
 interface = wlp0s29f7u5
 
 [colors]
+blue = #0F6EFD
+white = #FFFFFF
+
 background = #00
 background-alt = #373B41
 foreground = #C5C8C6
-text-color = #FFFFFF
-primary = #F0C674
+
+primary = ${colors.blue}
 secondary = #8ABEB7
-alert = #A54242
+alert = #DC3545
 disabled = #707880
-blue = #0F6EFD
 
 [bar/main]
 width = 100%
@@ -55,10 +57,11 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+; font-0 = monospace;2
+font-0 = CaskaydiaCoveNerdFont;2
 
 modules-left = xworkspaces xwindow
-modules-right = network-download network-upload uptime memory cpu date
+modules-right = uptime network-download network-upload memory systray date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -67,7 +70,7 @@ enable-ipc = true
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-wm-restack = i3
+; wm-restack = i3
 
 ; override-redirect = true
 
@@ -81,16 +84,16 @@ wm-restack = i3
 ; https://polybar.readthedocs.io/en/stable/user/modules/tray.html
 [module/systray]
 type = internal/tray
-
-format-margin = 8pt
-tray-spacing = 16pt
+format-margin = 1pt
+tray-spacing = 5pt
+tray-size = 20pt
 
 [module/xworkspaces]
 type = internal/xworkspaces
 
 label-active = %name%
 label-active-background = ${colors.background-alt}
-label-active-underline = ${colors.blue}
+label-active-underline = ${colors.primary}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -148,14 +151,14 @@ label-indicator-background = ${colors.secondary}
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
-format-prefix-foreground = ${colors.text-color}
+format-prefix-foreground = ${colors.white}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = "CPU "
-format-prefix-foreground = ${colors.text-color}
+format-prefix-foreground = ${colors.white}
 label = %percentage:2%%
 
 [network-base]
@@ -183,19 +186,15 @@ date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
-label-foreground = ${colors.text-color}
-
-; [module/power]
-; type = custom/script
-; exec = /home/kuro/.config/dotfiles/rofi/files/applets/bin/powermenu.sh
+label-foreground = ${colors.white}
 
 [module/volume]
 type = internal/volume
-format-volume = "<label-volume>  <bar-volume>"
+format-volume = "<label-volume> <bar-volume>"
 
-label-volume = " "
+label-volume = ""
 label-volume-foreground = #40ad4b
-label-muted = muted
+label-muted = " muted"
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #40ad4b
@@ -215,43 +214,45 @@ bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground}
 format-volume-foreground = ${colors.foreground}
 format-volume-background = ${colors.background}
-format-muted-prefix = "  "
-format-muted-prefix-foreground = "#ff0000"
+format-muted-prefix = " "
+format-muted-prefix-foreground = ${colors.alert}
 format-muted-foreground = ${colors.foreground}
 format-muted-background = ${colors.background}
 
 [module/uptime]
 type = custom/script
 exec = uptime | awk -F, '{sub(".*up ",x,$1);print $1}'
-interval = 100
-label = Up:%output%
+interval = 60
+label = %output%
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
-; format-prefix = " "
-format-prefix-foreground = #C15D3E
-format-underline = ${colors.blue}
+format-prefix = " "
+format-prefix-foreground = ${colors.white}
+format-underline = ${colors.primary}
 
 [module/network-upload]
 type = internal/network
 interface = ${var.interface}
 label-connected = "%upspeed:7%"
 format-connected = <label-connected>
-; format-connected-prefix = ""
-format-connected-prefix-foreground = #FE522C
+format-connected-prefix = "↑"
+format-connected-prefix-foreground = ${colors.white}
 format-connected-foreground = ${colors.foreground}
 format-connected-background = ${colors.background}
-;format-connected-underline = #62FF00
+format-connected-underline = #62FF00
 
 [module/network-download]
 type = internal/network
 interface = ${var.interface}
 label-connected = "%downspeed:7%"
 format-connected = <label-connected>
-; format-connected-prefix = ""
-format-connected-prefix-foreground = #3EC13F
+format-connected-prefix = "↓"
+format-connected-prefix-foreground = ${colors.white}
 format-connected-foreground = ${colors.foreground}
 format-connected-background = ${colors.background}
-;format-connected-underline = #62FF00
+format-connected-underline = #62FF00
+format-disconnected = <label-disconnected>
+label-disconnected-foreground = #66ffff
 
 [settings]
 screenchange-reload = true
