--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,3 +1,5 @@
+; ⛥
+
 ;==========================================================
 ;
 ;
@@ -61,7 +63,7 @@ separator-foreground = ${colors.disabled}
 font-0 = CaskaydiaCoveNerdFont;2
 
 modules-left = xworkspaces xwindow
-modules-right = uptime network-download network-upload memory systray date
+modules-right = uptime network-download network-upload filesystem memory cpu systray date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -118,7 +120,8 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+; label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = "  %percentage_used%%"
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -157,7 +160,7 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = " "
 format-prefix-foreground = ${colors.white}
 label = %percentage:2%%
 
@@ -235,7 +238,7 @@ type = internal/network
 interface = ${var.interface}
 label-connected = "%upspeed:7%"
 format-connected = <label-connected>
-format-connected-prefix = "↑ "
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.white}
 format-connected-foreground = ${colors.foreground}
 format-connected-background = ${colors.background}
@@ -246,7 +249,7 @@ type = internal/network
 interface = ${var.interface}
 label-connected = "%downspeed:7%"
 format-connected = <label-connected>
-format-connected-prefix = "↓ "
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.white}
 format-connected-foreground = ${colors.foreground}
 format-connected-background = ${colors.background}
