--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -63,7 +63,7 @@ separator-foreground = ${colors.disabled}
 font-0 = CaskaydiaCoveNerdFont;2
 
 modules-left = xworkspaces xwindow
-modules-right = uptime network-download network-upload filesystem memory cpu systray date
+modules-right = network-download network-upload filesystem memory cpu systray date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -138,18 +138,6 @@ label-volume = %percentage%%
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
 [module/memory]
 type = internal/memory
 interval = 2
@@ -217,7 +205,7 @@ bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground}
 format-volume-foreground = ${colors.foreground}
 format-volume-background = ${colors.background}
-format-muted-prefix = " "
+format-muted-prefix = ""
 format-muted-prefix-foreground = ${colors.alert}
 format-muted-foreground = ${colors.foreground}
 format-muted-background = ${colors.background}
