--- a/manjaro/polybar/config.ini
+++ b/manjaro/polybar/config.ini
@@ -19,7 +19,7 @@
 ;==========================================================
 [var]
 home = /home/kuro
-interface = wlp0s29f7u5
+interface = enp2s0
 
 [colors]
 blue = #0F6EFD
