--- a/manjaro/polybar/config.ini
+++ b/manjaro/polybar/config.ini
@@ -63,7 +63,7 @@ separator-foreground = ${colors.disabled}
 font-0 = CaskaydiaCoveNerdFont;2
 
 modules-left = xworkspaces xwindow
-modules-right = network-download network-upload filesystem memory cpu systray date
+modules-right = uptime network-download network-upload filesystem memory cpu systray date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
