--- a/distrobox.ini
+++ b/distrobox.ini
@@ -5,3 +5,10 @@ pull=true
 root=false
 home="~/.local/share/distrobox/debian"
 exported_bins_path="~/.local/bin"
+
+[arch]
+image=archlinux
+nvidia=false
+pull=true
+root=false
+home="~/.local/share/distrobox/archlinux"
