--- a/distrobox.ini
+++ b/distrobox.ini
@@ -1,7 +1,11 @@
 [debian]
 image=debian:bookworm-slim
-nvidia=false
 pull=true
 root=false
-home="~/.local/share/distrobox/debian"
+init=false
+nvidia=false
+unshare_all=true
 exported_bins_path="~/.local/bin"
+home="~/.local/share/distrobox/debian"
+additional_packages="curl"
+init_hooks="curl -fsS https://dl.brave.com/install.sh | sh" # install brave
