--- a/distrobox.ini
+++ b/distrobox.ini
@@ -7,5 +7,4 @@ nvidia=false
 unshare_all=true
 exported_bins_path="~/.local/bin"
 home="~/.local/share/distrobox/debian"
-additional_packages="curl"
-init_hooks="curl -fsS https://dl.brave.com/install.sh | sh" # install brave
+additional_packages="chromium"
