nixos: disable zerotier & resolved

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -8,3 +8,9 @@ unshare_all=true
 exported_bins_path="~/.local/bin"
 home="~/.local/share/distrobox/debian"
 additional_packages="chromium"
+
+[arch]
+image=archlinux:latest
+init=true
+home="~/.local/share/distrobox/arch"
+additional_packages="fastfetch htop stress"
