--- a/distrobox.ini
+++ b/distrobox.ini
@@ -9,8 +9,11 @@ exported_bins_path="~/.local/bin"
 home="~/.local/share/distrobox/debian"
 additional_packages="chromium"
 
-[arch]
-image=archlinux:latest
-init=true
-home="~/.local/share/distrobox/arch"
-additional_packages="fastfetch htop stress"
+[bqckup]
+image=ubuntu
+root=false
+init=false
+nvidia=false
+unshare_all=true
+home="~/.local/share/distrobox/ubuntu-dev"
+additional_packages="python3 python3-venv make binutils python3-dev micro"
