--- a/distrobox.ini
+++ b/distrobox.ini
@@ -17,3 +17,12 @@ nvidia=false
 unshare_all=true
 home="~/.local/share/distrobox/ubuntu-dev"
 additional_packages="python3 python3-venv make binutils python3-dev micro"
+
+[work]
+image=archlinux:latest
+root=false
+init=false
+nvidia=false
+unshare_all=true
+home="~/.local/share/distrobox/work"
+additional_packages="discord fastfetch firefox"
