--- a/distrobox.ini
+++ b/distrobox.ini
@@ -25,4 +25,4 @@ init=false
 nvidia=false
 unshare_all=true
 home="~/.local/share/distrobox/work"
-additional_packages="discord fastfetch firefox"
+additional_packages="bitwarden fastfetch firefox"
