--- a/distrobox.ini
+++ b/distrobox.ini
@@ -21,8 +21,8 @@ additional_packages="python3 python3-venv make binutils python3-dev micro"
 [work]
 image=archlinux:latest
 root=false
-init=false
+init=true
 nvidia=false
 unshare_all=true
 home="~/.local/share/distrobox/work"
-additional_packages="bitwarden fastfetch firefox"
+additional_packages="bitwarden fastfetch firefox tailscale"
