--- a/distrobox.ini
+++ b/distrobox.ini
@@ -18,7 +18,7 @@ unshare_all=true
 home="~/.local/share/distrobox/ubuntu-dev"
 additional_packages="python3 python3-venv make binutils python3-dev micro"
 
-[work]
+[work] # archBtw
 image=archlinux:latest
 root=false
 init=true
