--- a/distrobox.ini
+++ b/distrobox.ini
@@ -23,6 +23,7 @@ image=archlinux:latest
 root=false
 init=true
 nvidia=false
+start_now=true
 unshare_all=true
 home="~/.local/share/distrobox/work"
 additional_packages="bitwarden fastfetch firefox tailscale"
