distrobox: remote bqckup

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -9,16 +9,8 @@ exported_bins_path="~/.local/bin"
 home="~/.local/share/distrobox/debian"
 additional_packages="chromium"
 
-[bqckup]
-image=ubuntu
-root=false
-init=false
-nvidia=false
-unshare_all=true
-home="~/.local/share/distrobox/ubuntu-dev"
-additional_packages="python3 python3-venv make binutils python3-dev micro"
-
-[work] # archBtw
+#archBtw
+[work]
 image=archlinux:latest
 root=false
 init=true
