disstrobox: add agent

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -19,3 +19,10 @@ start_now=true
 unshare_all=true
 home="~/.local/share/distrobox/work"
 additional_packages="bitwarden fastfetch firefox tailscale"
+
+[agent]
+image=ubuntu:latest
+root=false
+init=true
+start_now=true
+additional_packages="ansible libmagic1 libmagic-dev make micro python3.12 python3.12-venv"
