--- a/distrobox.ini
+++ b/distrobox.ini
@@ -21,8 +21,9 @@ home="~/.local/share/distrobox/work"
 additional_packages="bitwarden fastfetch firefox tailscale"
 
 [agent]
-image=ubuntu:latest
+image=ubuntu:24.04
 root=false
 init=true
 start_now=true
-additional_packages="ansible libmagic1 libmagic-dev make micro python3.12 python3.12-venv"
+home="~/.local/share/distrobox/work"
+additional_packages="ansible git libmagic1 libmagic-dev make micro python3.12 python3.12-venv tmux"
