--- a/distrobox.ini
+++ b/distrobox.ini
@@ -25,5 +25,9 @@ image=ubuntu:24.04
 root=false
 init=true
 start_now=true
+unshare_ipc=true
+unshare_netns=false
+unshare_process=true
+unshare_devsys=true
 home="~/.local/share/distrobox/agent"
 additional_packages="ansible git libmagic1 libmagic-dev make micro python3.12 python3.12-venv tmux"
