--- a/distrobox.ini
+++ b/distrobox.ini
@@ -30,4 +30,4 @@ unshare_netns=false
 unshare_process=true
 unshare_devsys=true
 home="~/.local/share/distrobox/agent"
-additional_packages="ansible git libmagic1 libmagic-dev make micro python3.12 python3.12-venv tmux"
+additional_packages="ansible libmagic1 libmagic-dev make micro python3.12 python3.12-venv tmux"
