--- a/distrobox.ini
+++ b/distrobox.ini
@@ -31,3 +31,12 @@ unshare_process=true
 unshare_devsys=true
 home="~/.local/share/distrobox/agent"
 additional_packages="ansible binutils libmagic1 libmagic-dev make micro python3.12 python3.12-dev python3.12-venv tmux"
+
+[2fa]
+image=ubuntu:24.04
+root=false
+init=true
+start_now=true
+unshare_all=true
+home="~/.local/share/distrobox/2fa"
+additional_packages="micro libpam-google-authenticator openssh-server"
