--- a/distrobox.ini
+++ b/distrobox.ini
@@ -30,7 +30,7 @@ unshare_netns=false
 unshare_process=true
 unshare_devsys=true
 home="~/.local/share/distrobox/agent"
-additional_packages="ansible binutils libmagic1 libmagic-dev make micro python3.12 python3.12-dev python3.12-venv tmux"
+additional_packages="ansible binutils libmagic1 libmagic-dev make micro openssh-server python3.12 python3.12-dev python3.12-venv tmux"
 
 [2fa]
 image=ubuntu:24.04
