--- a/distrobox.ini
+++ b/distrobox.ini
@@ -39,4 +39,4 @@ init=true
 start_now=true
 unshare_all=true
 home="~/.local/share/distrobox/2fa"
-additional_packages="micro libpam-google-authenticator openssh-server"
+additional_packages="micro libpam-google-authenticator rsyslog openssh-server"
