--- a/distrobox.ini
+++ b/distrobox.ini
@@ -25,10 +25,7 @@ image=ubuntu:24.04
 root=false
 init=true
 start_now=true
-unshare_ipc=true
-unshare_netns=false
-unshare_process=true
-unshare_devsys=true
+unshare_all=true
 home="~/.local/share/distrobox/agent"
 additional_packages="ansible binutils jq libmagic1 libmagic-dev make micro openssh-server python3.12 python3.12-dev python3.12-venv rsyslog tmux"
 
