distrobox: add bqckup

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -37,3 +37,12 @@ start_now=true
 unshare_all=true
 home="~/.local/share/distrobox/2fa"
 additional_packages="micro libpam-google-authenticator rsyslog openssh-server"
+
+[bqckup]
+image=ubuntu:22.04
+root=false
+init=false
+start_now=true
+unshare_all=true
+home="~/.local/share/distrobox/bqckup"
+additional_packages="rustic restic python3.8"
