nixos: update flake

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -39,10 +39,10 @@ home="~/.local/share/distrobox/2fa"
 additional_packages="micro libpam-google-authenticator rsyslog openssh-server"
 
 [bqckup]
-image=ubuntu:22.04
+image=ubuntu:24.04
 root=false
 init=false
 start_now=true
 unshare_all=true
 home="~/.local/share/distrobox/bqckup"
-additional_packages="micro libfuse2"
+additional_packages="make micro libfuse2" # python3.8 python3.8-pip python3.8-venv python3.8-dev
