--- a/distrobox.ini
+++ b/distrobox.ini
@@ -45,4 +45,4 @@ init=false
 start_now=true
 unshare_all=true
 home="~/.local/share/distrobox/bqckup"
-additional_packages="make micro libfuse2" # python3.8 python3.8-pip python3.8-venv python3.8-dev
+additional_packages="binutils make micro libfuse2" # python3.8 python3.8-pip python3.8-venv python3.8-dev libpython3.8
